# homeassistant_github_copilot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  hacs.json  pyproject.toml
.github/: copilot-instructions.md
custom_components/github_copilot/: __init__.py  ai_task.py  api.py  config_flow.py  const.py  conversation.py  entity.py  manifest.json  runtime.py  strings.json
custom_components/github_copilot/translations/: en.json
docker/: .dockerignore  Dockerfile
docs/: system-prompt-design.md
tests/: __init__.py  conftest.py  test_ai_task.py  test_api.py  test_config_flow.py  test_conversation.py  test_init.py  test_runtime.py
